# openemc

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: .config  build.yml  driver.yml  firmware.yml  kernel.config
board-io-test/: Cargo.toml
board-io-test/src/: main.rs
defmt-ringbuf/: Cargo.toml  README.md
defmt-ringbuf-offline/: Cargo.toml
defmt-ringbuf-offline/src/: lib.rs
defmt-ringbuf/defmt-ringbuf-test/: Cargo.toml
defmt-ringbuf/defmt-ringbuf-test/.cargo/: config.toml
defmt-ringbuf/defmt-ringbuf-test/src/: main.rs
defmt-ringbuf/src/: lib.rs  ring_buffer.rs
devicetree/: openemc-rpi-nucleo-f103rb.dts  openemc-rpi.dts
misc/: Alternative-STUSB4500-NVMs.txt
openemc-bootloader/: Cargo.toml  build.rs  emc-bootloader-big.x  emc-bootloader-normal.x  emc-bootloader.x
openemc-bootloader/.cargo/: config.toml
openemc-bootloader/src/: backup.rs  board.rs  bootloader.rs  crc32.rs  flash.rs  flash_writer.rs  i2c_reg_slave.rs  i2c_slave.rs  main.rs  timer.rs  util.rs  watchdog.rs
openemc-bootloader/src/boards/: generic.rs  generic.x  mod.rs  stm_nucleo_f103rb.rs
openemc-build/: Cargo.toml
openemc-build/src/: lib.rs
openemc-driver/: Makefile  openemc.c  openemc.h  openemc_adc.c  openemc_battery.c  openemc_gpio.c  openemc_pinctrl.c  openemc_power.c  openemc_pstore.c  openemc_pwm.c  openemc_rtc.c  openemc_supply.c  openemc_wdt.c
openemc-firmware/: Cargo.toml  build.rs  memory-big.x  memory-normal.x  memory-standalone.x  memory.x
openemc-firmware/.cargo/: config.toml
openemc-firmware/src/: adc.rs  backup.rs  board.rs  boot.rs  bq25713.rs  cfg.rs  crc.rs  flash_data.rs  flash_util.rs  i2c_master.rs  i2c_reg_slave.rs  i2c_slave.rs  irq.rs  main.rs  pio.rs  pstore.rs  pwm.rs  reg.rs  rtc.rs  stusb4500.rs  util.rs  watchman.rs
openemc-firmware/src/boards/: generic.rs  stm_nucleo_f103rb.rs
openemc-firmware/src/supply/: max14636.rs  mod.rs  stusb4500.rs
openemc-firmware/src/supply/stusb4500/: mod.rs  nvm.rs
openemc-io/: Cargo.toml  LICENSE  README.md
openemc-io/src/: lib.rs
openemc-log/: Cargo.toml
openemc-log/src/: main.rs  syslog.rs
openemc-pack/: Cargo.toml
openemc-pack/src/: main.rs
openemc-shared/: Cargo.toml
openemc-shared/src/: boot.rs  flash.rs  lib.rs
scripts/: crates-fmt.sh  crates-update.sh  devicetree-build.sh  devicetree-load.sh  driver-build.sh  driver-install.sh  driver-load.sh  driver-unload.sh  rsync.sh
systemd/: 10-openemc.rules  openemc-log.service
xtask/: Cargo.toml
xtask/src/: main.rs
