[package]
name = "openemc-bootloader"
description = "OpenEMC Bootloader"
authors = ["Sebastian Urban <surban@surban.net>"]
license = "GPL-3.0"
version = "0.3.3"
publish = false
edition = "2021"

[features]
default = ["defmt-rtt"]

[dependencies]
openemc-shared = { path = "../openemc-shared" }
defmt-ringbuf = { path = "../defmt-ringbuf", optional = true }

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
stm32f1 = { version = "0.15", features = ["stm32f103", "rt"] }
panic-probe = "0.3"
defmt = "0.3"
defmt-rtt = { version = "0.4", optional = true }

[dev-dependencies]
defmt-test = "0.3"

[build-dependencies]
openemc-build = { path = "../openemc-build" }

[profile.release]
opt-level = 'z'
lto = true
debug = 2
