[package]
name = "openemc-bootloader"
description = "OpenEMC Bootloader"
authors = ["Sebastian Urban <surban@surban.net>"]
license = "GPL-3.0"
version = "1.0.1"
publish = false
edition = "2021"

[[bin]]
name = "openemc-bootloader"
path = "src/main.rs"
test = false
doctest = false
bench = false

[features]
default = ["defmt-rtt"]

[dependencies]
openemc-shared = { path = "../openemc-shared" }
defmt-ringbuf = { path = "../defmt-ringbuf", optional = true }

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
stm32f1 = { version = "0.16", features = ["stm32f103", "rt"] }
panic-probe = "1"
defmt = "1"
defmt-rtt = { version = "1.1", optional = true }

[dev-dependencies]
defmt-test = "0.4"

[build-dependencies]
openemc-build = { path = "../openemc-build" }

[profile.release]
opt-level = 'z'
lto = true
debug = 2
