[package]
name = "openemc-firmware"
description = "OpenEMC Firmware"
authors = ["Sebastian Urban <surban@surban.net>"]
license = "GPL-3.0"
version = "0.9.8"
publish = false
edition = "2021"

[features]
default = ["defmt-rtt"]
debug-blink = []
debug-i2c2-glitch = []

[dependencies]
openemc-shared = { path = "../openemc-shared" }
defmt-ringbuf = { path = "../defmt-ringbuf", optional = true }

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
cortex-m-rtic = "1.1"
embedded-hal = "0.2"
stm32f1 = { version = "0.15", features = ["stm32f103", "rt"] }
# stm32f1xx-hal = { version = "0.10", features = ["stm32f103", "medium", "rt"] }
stm32f1xx-hal = { git = "https://github.com/surban/stm32f1xx-hal.git", branch = "i2c-reset", features = [
    "stm32f103",
    "medium",
    "rt",
] }
panic-halt = "0.2"
panic-probe = "0.3"
systick-monotonic = "1.0"
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-rtt = { version = "0.4", optional = true }
nb = "1.0"
heapless = "0.8"
byteorder = { version = "1", default-features = false }

[dev-dependencies]
defmt-test = "0.3"

[build-dependencies]
openemc-build = { path = "../openemc-build" }
openemc-shared = { path = "../openemc-shared" }

[profile.devrel]
inherits = "release"
lto = false

[profile.release]
opt-level = "z"
lto = true
debug = 2
codegen-units = 1
panic = "abort"
incremental = false
