[package]
name = "openemc-firmware"
description = "OpenEMC Firmware"
authors = ["Sebastian Urban <surban@surban.net>"]
license = "GPL-3.0"
version = "1.1.0"
publish = false
edition = "2021"

[[bin]]
name = "openemc-firmware"
path = "src/main.rs"
test = false
doctest = false
bench = false

[features]
default = ["defmt-rtt"]
debug-blink = []
debug-i2c2-glitch = []

[dependencies]
openemc-shared = { path = "../openemc-shared" }
defmt-ringbuf = { path = "../defmt-ringbuf", optional = true }

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
cortex-m-rtic = "1.1"
embedded-hal = "1"
stm32f1 = { version = "0.16", features = ["stm32f103", "rt"] }
stm32f1xx-hal = { version = "0.11", features = ["stm32f103", "medium"] }
panic-halt = "1"
panic-probe = "1"
systick-monotonic = "1.0"
defmt = { version = "1", features = ["encoding-rzcobs"] }
defmt-rtt = { version = "1.1", optional = true }
nb = "1.1"
heapless = { version = "0.9", features = ["defmt"] }
byteorder = { version = "1", default-features = false }

[dev-dependencies]
defmt-test = "0.4"

[build-dependencies]
openemc-build = { path = "../openemc-build" }
openemc-shared = { path = "../openemc-shared" }

[profile.devrel]
inherits = "release"
lto = false

[profile.release]
opt-level = "z"
lto = true
debug = 2
codegen-units = 1
panic = "abort"
incremental = false
