[package]
name = "openemc-log"
description = "OpenEMC Logger"
authors = ["Sebastian Urban <surban@surban.net>"]
license = "GPL-3.0"
version = "0.6.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
defmt-decoder = { version = "0.3", features = ["unstable"] }
defmt-parser = { version = "0.3", features = ["unstable"] }
nix = { version = "0.27", features = ["poll"] }
log = "0.4"
libc = "0.2"
env_logger = "0.10"
ctrlc = { version = "3", features = ["termination"] }
flate2 = "1"
