[package]
name = "openemc-pack"
description = "Packs firmware in format bootable by OpenEMC bootloader."
authors = ["Sebastian Urban <surban@surban.net>"]
license = "GPL-3.0"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
openemc-shared = { path = "../openemc-shared" }

clap = { version = "4", features = ["derive"] }
byteorder = "1.4"
crc32fast = "1.3"
regex = "1"
rand = "0.8"
