[package]
name = "defmt-ringbuf-test"
authors = ["Sebastian Urban <surban@surban.net>"]
license = "GPL-3.0"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
defmt-ringbuf = { path = "..", default-features = false }

cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
stm32f1 = { version = "0.15", features = ["stm32f103", "rt"] }
panic-probe = "0.3"
defmt = "0.3"
defmt-rtt = "0.4"

[profile.release]
opt-level = 'z'
lto = true
debug = 2
